# few-shot-classifier-setfit

./: .gitattributes  README.md  pyproject.toml  requirements.txt
data/: test.csv  train.csv
logs/: best_hyperparams.json
notebooks/: training.ipynb  training_hyperparam_optim.ipynb
scripts/: hyperparam_search.py  train_model.py
