[tool.poetry]
name = "few-shot-setkit"
version = "0.1.0"
description = "A few shot training script for mpnet"
authors = ["viraj-s15 <veer15102003@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.2"
setfit = {extras = ["optuna"], version = "^0.7.0"}
pandas = "^2.1.2"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
